--- a/StageStory/appsettings.json
+++ b/StageStory/appsettings.json
@@ -3,6 +3,15 @@
     "DefaultConnectionString": "Server=localhost;Database=StageStoryDB;Trusted_Connection=True;TrustServerCertificate=True;"
 
   },
+  {
+    "Jwt": {
+      "Key": "MaCleSuperSecreteEtLongue1234567890",
+      "Issuer": "StageStory",
+      "Audience": "StageStory",
+      "ExpireHours": 2
+    }
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
