--- a/StageStory.ServiceDefaults/StageStory.ServiceDefaults.csproj
+++ b/StageStory.ServiceDefaults/StageStory.ServiceDefaults.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.Build" Version="18.0.2" />
 
     <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.9.0" />
     <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.5.0" />
